--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
   "author": "Bruno Lira & Paulo de Araujo",
   "license": "ISC",
   "type": "module",
-    "scripts": {
+  "scripts": {
     "dev": "node --loader ts-node/esm src/config/server.ts",
     "build": "tsc",
     "start": "node dist/config/server.js"
   },
   "dependencies": {
+    "apicache": "^1.6.3",
     "archiver": "^5.3.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@types/apicache": "^1.6.7",
     "@types/archiver": "^5.1.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.21",
