feat: add Vercel configuration and update API entry point; include @vercel/node dependency

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ package-lock.json
 # Build output
 dist/
 build/
+.vercel
 
 # Environment variables
 .env
@@ -39,3 +40,4 @@ coverage/
 .npm/
 .eslintcache
 .cache/
+
