--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,11 @@
     "target": "es6",
     "module": "esnext",
     "outDir": "dist",
-    "rootDir": "src",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
   },
-  "include": ["src"]
+  "include": ["src", "api/index.js"]
 }
