--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/config/server.js",
   "author": "Bruno Lira & Paulo de Araujo",
   "license": "MIT",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "dev": "node --loader ts-node/esm src/config/server.ts",
     "build": "tsc",
@@ -25,6 +25,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.21",
     "@types/node": "^20.5.9",
+    "@types/node-fetch": "^2.6.12",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.0"
   }
